sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: value i
  while (i != getNombreValeurs()){
         ^AlgBubbleSort1:4: error: not found: value i
    if (!plusPetit(i,i+1)){
                   ^AlgBubbleSort1:4: error: not found: value i
    if (!plusPetit(i,i+1)){
                     ^AlgBubbleSort1:5: error: not found: value i
      echange(i,i+1)
              ^AlgBubbleSort1:5: error: not found: value i
      echange(i,i+1)
                ^AlgBubbleSort1:7: error: not found: value i
    i = i + 1
    ^